--- a/fedora/index.html
+++ b/fedora/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang=en>
 <head>
 <meta charset=utf-8>
-<title>Fedora Asahi Remix - Asahi Linux</title><link rel=stylesheet href=/css/main.css?5f36ee5f>
+<title>Fedora Asahi Remix - Asahi Linux</title><link rel=stylesheet href=/css/main.css?b10066a9>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -17,6 +17,7 @@
 <meta name=twitter:image:height content="256">
 <meta property="og:image" content="https://asahilinux.org/img/AsahiLinux_logomark_256px.png">
 <meta property="og:title" content="Fedora Asahi Remix - Asahi Linux">
+<script>var kawaii=new URLSearchParams(window.location.search).get("kawaii")??localStorage.getItem("kawaii");kawaii=="true"?(document.documentElement.classList.add("kawaii"),localStorage.setItem("kawaii","true")):localStorage.removeItem("kawaii")</script>
 </head><body class="landing fedora">
 <header id=header>
 <div class=header-logo>
@@ -78,7 +79,9 @@
 <img src=/img/AsahiLinux_logomark.svg class=logo alt="Asahi Linux logo">
 </a>
 <span class=license>Licensed under CC BY-SA 4.0</span>
-<span class=disclaimer>Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.</span>
+<span class=disclaimer>Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.
+<span class=kawaii-disclaimer>Kawaii Asahi Linux logo by <a href=https://github.com/SAWARATSUKI/Logos>SAWARATSUKI</a> (see link for license).</span>
+</span>
 </div><div class=footer-links>
 <ul class=footer-services>
 <li><a href=https://social.treehouse.systems/@AsahiLinux><i class="fab fa-mastodon"></i></a></li><li><a href=https://github.com/AsahiLinux><i class="fab fa-github"></i></a></li><li><a href=https://www.patreon.com/marcan><i class="fab fa-patreon"></i></a></li></ul><ul class=footer-menu-container>
