--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta name=generator content="Hugo 0.110.0">
 <meta charset=utf-8>
-<title>Asahi Linux</title><link rel=stylesheet href=/css/main.css?5f36ee5f>
+<title>Asahi Linux</title><link rel=stylesheet href=/css/main.css?b10066a9>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -18,6 +18,7 @@
 <meta name=twitter:image:height content="256">
 <meta property="og:image" content="https://asahilinux.org/img/AsahiLinux_logomark_256px.png">
 <meta property="og:title" content="Asahi Linux">
+<script>var kawaii=new URLSearchParams(window.location.search).get("kawaii")??localStorage.getItem("kawaii");kawaii=="true"?(document.documentElement.classList.add("kawaii"),localStorage.setItem("kawaii","true")):localStorage.removeItem("kawaii")</script>
 </head><body class=landing>
 <header id=header>
 <div class=header-logo>
@@ -29,7 +30,7 @@
 <div>
 <h1>Linux on Apple Silicon</h1><p>Asahi Linux aims to bring you a polished Linux® experience on Apple Silicon Macs.</p><a href=/about class=more>Learn more<i class="fas fa-angle-right more"></i></a>
 <h2>Install from macOS</h2><pre><code id=curl>curl https://alx.sh | sh</code> <a id=copy-button href=#><i class="fa fa-clipboard"></i></code></a></pre><h3><a class=more href=/fedora/#device-support>Device support<i class="fas fa-angle-right more"></i></a></h3></div><div>
-<img src=/img/asahilinux_laptop.svg?763d4e1d alt="Asahi Linux on a laptop">
+<img class=laptop src=/img/asahilinux_laptop.svg?763d4e1d alt="Asahi Linux on a laptop">
 </div></div></section><section id=download>
 <div class=center-title>
 <h1><a class=stealth href=/fedora>Download</a></h1></div><div class="download-card center-card">
@@ -77,7 +78,9 @@
 <img src=/img/AsahiLinux_logomark.svg class=logo alt="Asahi Linux logo">
 </a>
 <span class=license>Licensed under CC BY-SA 4.0</span>
-<span class=disclaimer>Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.</span>
+<span class=disclaimer>Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.
+<span class=kawaii-disclaimer>Kawaii Asahi Linux logo by <a href=https://github.com/SAWARATSUKI/Logos>SAWARATSUKI</a> (see link for license).</span>
+</span>
 </div><div class=footer-links>
 <ul class=footer-services>
 <li><a href=https://social.treehouse.systems/@AsahiLinux><i class="fab fa-mastodon"></i></a></li><li><a href=https://github.com/AsahiLinux><i class="fab fa-github"></i></a></li><li><a href=https://www.patreon.com/marcan><i class="fab fa-patreon"></i></a></li></ul><ul class=footer-menu-container>
