--- a/support/index.html
+++ b/support/index.html
@@ -24,11 +24,12 @@
 <a href=/><img src=/img/AsahiLinux_logo.svg?d619e737 class=logo alt></a>
 </div><div class=header-menu>
 <ul class="menu-container flex-container">
-<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
+<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
 <div class=post-wrapper>
 <div class=post>
-<h1 id=support-asahi-linux>Support Asahi Linux</h1><p>Asahi Linux was started by marcan as a Patreon-funded project, and he is currently aiming to raise enough pledges to allow him to work on Asahi Linux full-time on both GitHub sponsors and Patreon. If you would like to contribute to this cause financially, head over to <a href=https://github.com/sponsors/marcan>GitHub sponsors</a> or <a href=https://patreon.com/marcan>the Patreon campaign</a> (GitHub Sponsors is preferred as it has lower fees). You can also make one-time donations on GitHub sponsors.</p><p>Porting Linux to Apple Silicon is no small task - certainly not something that can be accomplished only with spare-time hacking. Having one full-time dedicated developer on the project will allow it to advance at a steady pace and ensure that everything is paid the proper attention.</p><p>Excess funds will be used to support the project in other ways, and to fund other contributors and other projects that Asahi Linux depends on as things advance.</p><p>Some other contributors also have their own fundraising platforms:</p><ul>
-<li>Martin Povišer &ldquo;povik&rdquo;, our lead kernel audio developer, is on <a href=https://github.com/sponsors/povik>GitHub Sponsors</a>.</li><li>Ella Stanforth, who is working on Vulkan userspace drivers for Apple Silicon GPUs, is on <a href=https://github.com/sponsors/Ella-0>GitHub Sponsors</a>.</li><li>Neal Gompa, who leads the <a href=https://fedoraproject.org/wiki/SIGs/Asahi>Fedora Asahi SIG</a> and is the primary developer of the <a href=https://fedora-asahi-remix.org/>Fedora Asahi Remix</a>, is on <a href=https://github.com/sponsors/Conan-Kudo>GitHub Sponsors</a></li></ul></div></div></section><footer id=footer>
+<h1 id=support-asahi-linux>Support Asahi Linux</h1><p>The Asahi Linux project is funded by individuals like you. If you would like to support us financially, head over to our project <a href=https://opencollective.com/asahilinux>Open Collective</a>.</p><p>Porting Linux to Apple Silicon is no small task. Financial support will allow
+us to buy hardware and fund contributors, allowing the project to advance at a
+steady pace and ensure that everything is paid the proper attention.</p></div></div></section><footer id=footer>
 <div class=footer-menu>
 <div class=footer-logo>
 <a href=/>
@@ -40,5 +41,5 @@
 </span>
 </div><div class=footer-links>
 <ul class=footer-services>
-<li><a href=https://social.treehouse.systems/@AsahiLinux><i class="fab fa-mastodon"></i></a></li><li><a href=https://github.com/AsahiLinux><i class="fab fa-github"></i></a></li><li><a href=https://www.patreon.com/marcan><i class="fab fa-patreon"></i></a></li></ul><ul class=footer-menu-container>
+<li><a href=https://social.treehouse.systems/@AsahiLinux><i class="fab fa-mastodon"></i></a></li><li><a href=https://github.com/AsahiLinux><i class="fab fa-github"></i></a></li></ul><ul class=footer-menu-container>
 <li><a href=/about>About</a></li><li><a href=/code-of-conduct>Code of Conduct</a></li><li><a href=/copyright>Copyright policy</a></li></ul></div></div></footer></body></html>
